--- a/app/globals.css
+++ b/app/globals.css
@@ -8,3 +8,16 @@ body {
   margin: 0;
   padding: 0;
 }
+
+
+@layer base {
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
+}
